Fix images scaling on mobile

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -61,9 +61,8 @@ header nav ul li a:hover {
 }
 
 .profile-picture {
-    max-width: 60%;
     height: auto;
-    display: flex;
+    max-width: 60vw;
     padding-bottom: 24px;
     align-self: center;
 }
