--- a/portfolio/src/component/Project.css
+++ b/portfolio/src/component/Project.css
@@ -12,7 +12,7 @@
 }
 
 .project-img {
-    width: 30%;
+    width: 40vw;
     height: auto;
     align-self: center;
 }
@@ -34,6 +34,12 @@
 
 /* Desktop styling */
 @media (min-width: 768px){
+    .project-img {
+        width: 30%;
+        height: auto;
+        align-self: center;
+    }
+
     .project-wrapper {
         flex-direction: row;
         padding: 32px 16px;
